# leocc

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: deliver-dockerhub.yaml
include/: CExceptionConfig.h  ast.h  codegen.h  error_codes.h  exceptions.h  fib.h  list.h  parser.h  preprocessor.h  scanner.h  string_builder.h  token.h  types.h
notes/: README.md
src/: ast.c  codegen.c  fib.c  leocc.c  list.c  parser.c  preprocessor.c  scanner.c  string_builder.c  token.c
submodules/CException/config/: CExceptionConfig.h
tests/: main.c
tests/fixtures/: program1.c  program2.c
tests/include/: test_codegen.h  test_fib.h  test_list.h  test_parser.h  test_scanner.h  test_string_builder.h  test_token.h
tests/src/: test_codegen.c  test_fib.c  test_list.c  test_parser.c  test_scanner.c  test_string_builder.c  test_token.c
